@@ -1,7 +1,7 @@
 Curl and libcurl 7.17.2
 
  Public curl releases:         103
- Command line options:         122
+ Command line options:         123
  curl_easy_setopt() options:   148
  Public functions in libcurl:  55
  Public web site mirrors:      42
@@ -12,6 +12,7 @@ This release includes the following changes:
  
  o --data-urlencode was added
  o CURLOPT_PROXY_TRANSFER_MODE was added
+ o --no-keep-alive was added
 
 This release includes the following bugfixes:
 
@@ -53,6 +54,7 @@ advice from friends like these:
 
  Dan Fandrich, Gisle Vanem, Toby Peterson, Yang Tse, Daniel Black,
  Robin Johnson, Michal Marek, Ates Goral, Andres Garcia, Rob Crittenden,
- Emil Romanus, Alessandro Vesely, Ray Pekowski, Spacen Jasset, Andrew Moise
+ Emil Romanus, Alessandro Vesely, Ray Pekowski, Spacen Jasset, Andrew Moise,
+ Gilles Blanc
  
         Thanks! (and sorry if I forgot to mention someone)
